[project]
name = "openparty-app"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
  "django-debug-toolbar",
  "django-xmlrpc",
  "docutils",
  "flup",
  "lxml==4.7.1",
  "raven",
  "simplejson",
  "tweepy",
  "pytest-django",
  "pytest-random",
  "django-markup-deprecated",
  "Django==3.2.11",
  "mysqlclient",
  "django_sendmail_backend",
  "django-contrib-comments",
  "cssselect",
  "invoke",
  "fabric",
  "gunicorn",
]

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false